--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!Doctype HTML>
+<head>
+	<style> 
+		text-align: center;
+	</style>
+</head>
 <body>
 	<script src = oop.js type="text/javascript" charset="utf-8"></script>
+	<h1> Carregue F12</h1>
+	
 </body>
 </HTML>
